[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/EventsUI.gd" type="Script" id=2]
[ext_resource path="res://assets/events/refused.png" type="Texture" id=3]
[ext_resource path="res://assets/events/accepted.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 1 )

[node name="EventsUI" type="CanvasLayer"]
script = ExtResource( 2 )
eventID = 2

[node name="BackgroundTmp" type="ColorRect" parent="."]
margin_left = 1.5636
margin_right = 800.564
margin_bottom = 480.0
color = Color( 0.0745098, 0.337255, 0.376471, 0.721569 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SingleEventController" type="Control" parent="."]
margin_left = 187.993
margin_top = 65.3671
margin_right = 645.993
margin_bottom = 403.367
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="SingleEventController"]
margin_right = 457.0
margin_bottom = 337.0
color = Color( 0.371094, 0.14362, 0.0753784, 0.721569 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleController" type="Control" parent="SingleEventController"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="SingleEventController/TitleController"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 53.128
margin_top = 53.8775
margin_right = 136.128
margin_bottom = 81.8775
rect_pivot_offset = Vector2( -700.5, -123 )
custom_fonts/font = SubResource( 1 )
text = "Event :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleBackground" type="ColorRect" parent="SingleEventController/TitleController"]
margin_left = 188.0
margin_top = 38.0
margin_right = 426.0
margin_bottom = 105.0
rect_pivot_offset = Vector2( 82.183, 114.337 )
color = Color( 0.501961, 0.203922, 0.113725, 0.721569 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="SingleEventController/TitleController"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 207.0
margin_top = 52.0
margin_right = 408.0
margin_bottom = 101.0
rect_pivot_offset = Vector2( -700.5, -123 )
custom_fonts/font = SubResource( 2 )
text = "This is where title
goes."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionController" type="Control" parent="SingleEventController"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLabel" type="Label" parent="SingleEventController/DescriptionController"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 50.4439
margin_top = 132.701
margin_right = 157.444
margin_bottom = 152.701
rect_pivot_offset = Vector2( -700.5, -123 )
custom_fonts/font = SubResource( 3 )
text = "Description :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionBackground2" type="ColorRect" parent="SingleEventController/DescriptionController"]
margin_left = 186.168
margin_top = 120.046
margin_right = 425.168
margin_bottom = 258.046
rect_pivot_offset = Vector2( 82.183, 114.337 )
color = Color( 0.501961, 0.203922, 0.113725, 0.721569 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="SingleEventController/DescriptionController"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 202.668
margin_top = 132.046
margin_right = 391.668
margin_bottom = 209.046
rect_pivot_offset = Vector2( -700.5, -123 )
custom_fonts/font = SubResource( 4 )
text = "This is where description goes."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptButton" type="TextureButton" parent="SingleEventController"]
margin_left = 390.888
margin_top = 284.495
margin_right = 423.888
margin_bottom = 317.495
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RefuseButton" type="TextureButton" parent="SingleEventController"]
margin_left = 33.2245
margin_top = 287.056
margin_right = 67.2245
margin_bottom = 320.056
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="SingleEventController/AcceptButton" to="." method="_on_AcceptButton_pressed"]
[connection signal="pressed" from="SingleEventController/RefuseButton" to="." method="_on_RefuseButton_pressed"]
